criação de autenticação com token e refatoração do codigo para retorno de erros
