# src/routes/index.ts
@@ -1,5 +1,6 @@
 import { Router } from "express";
 
+import { authenticateRoutes } from "./authenticate.routes";
 import { CategoriesRoutes } from "./categories.routes";
 import { specificationsRoutes } from "./speficifications.routes";
 import { usersRoutes } from "./users.routes";
@@ -9,5 +10,6 @@ const router = Router();
 router.use("/categories", CategoriesRoutes);
 router.use("/specifications", specificationsRoutes);
 router.use("/users", usersRoutes);
+router.use(authenticateRoutes);
 
 export { router };
