# src/swagger.json
@@ -8,12 +8,111 @@
             "email": "joaojunior346@gmail.com"
         }
     },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
+            }
+        }
+    },
     "paths": {
+        "/session": {
+            "post": {
+                "tags": ["Session"],
+                "summary": "Authentication User",
+                "description": "Create Authentication for User",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Session"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "401": {
+                        "description": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "message": "message"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "message": "message"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "message": "message"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/users": {
+            "post": {
+                "tags": ["Users"],
+                "summary": "Create a User",
+                "description": "Create a new User",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Users"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "message": "message"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "message": "message"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/categories": {
             "post": {
-                "tags": [
-                    "Category"
-                ],
+                "tags": ["Category"],
                 "summary": "Create a category",
                 "description": "Create a new category",
                 "requestBody": {
@@ -29,20 +128,55 @@
                     "201": {
                         "description": "Created"
                     },
+                    "400": {
+                        "description": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "message": "message"
+                                }
+                            }
+                        }
+                    },
                     "500": {
-                        "description": "Category already exists"
+                        "description": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "message": "message"
+                                }
+                            }
+                        }
                     }
                 }
             },
             "get": {
-                "tags": [
-                    "Category"
-                ],
+                "tags": ["Category"],
                 "summary": "List all categories",
                 "description": "List all categories",
                 "responses": {
                     "200": {
                         "description": "Success"
+                    },
+                    "400": {
+                        "description": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "message": "message"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "message": "message"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -52,29 +186,52 @@
                 "tags": ["Category"],
                 "summary": "Upload a new category",
                 "description": "Upload a new category",
-                "requestBody":{
-                    "content":{
-                        "multipart/form-data":{
-                            "schema":{
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
                                 "$ref": "#/definitions/CategoriesImport"
                             }
                         }
                     }
                 },
                 "responses": {
-                    "201":{
+                    "201": {
                         "description": "Created Categories"
+                    }
+                },
+                "400": {
+                    "description": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": "message"
+                            }
+                        }
+                    }
+                },
+                "500": {
+                    "description": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": "message"
+                            }
+                        }
                     }
                 }
             }
         },
         "/specifications": {
             "post": {
-                "tags": [
-                    "Specifications"
-                ],
+                "tags": ["Specifications"],
                 "summary": "Create a specifications",
                 "description": "Create a new specifications",
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -85,55 +242,88 @@
                     }
                 },
                 "responses": {
-                    "201":{
+                    "201": {
                         "description": "Created"
                     },
-                    "500":{
-                        "description":"Specification already exists"
-                    }
-                }
-
-            }
-        },
-        "/users": {
-            "post": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Create a User",
-                "description": "Create a new User",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
+                    "400": {
+                        "description": {
                             "schema": {
-                                "$ref": "#/definitions/Users"
+                                "type": "object",
+                                "properties": {
+                                    "message": "message"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "message": "message"
+                                }
                             }
                         }
                     }
-                },
+                }
+            },
+            "get": {
+                "tags": ["Specifications"],
+                "summary": "List all specifications",
+                "description": "List all specifications",
                 "responses": {
-                    "201":{
-                        "description": "Created"
+                    "200": {
+                        "description": "Success"
                     },
-                    "500":{
-                        "description":"Users already exists"
+                    "400": {
+                        "description": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "message": "message"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "message": "message"
+                                }
+                            }
+                        }
                     }
                 }
-
             }
         }
     },
     "definitions": {
+        "Session": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            },
+            "example": {
+                "email": "joaojunior346@gmail.com",
+                "password": "1234"
+            }
+        },
         "Specifications": {
             "type": "object",
             "properties": {
                 "name": {
                     "type": "string"
                 },
-                "description":{
+                "description": {
                     "type": "string"
                 }
-
             },
             "example": {
                 "name": "Cambio automatico",
@@ -146,10 +336,9 @@
                 "name": {
                     "type": "string"
                 },
-                "description":{
+                "description": {
                     "type": "string"
                 }
-
             },
             "example": {
                 "name": "SUV",
@@ -162,16 +351,15 @@
                 "name": {
                     "type": "string"
                 },
-                "email":{
+                "email": {
                     "type": "string"
                 },
-                "password":{
+                "password": {
                     "type": "string"
                 },
-                "driver_license":{
+                "driver_license": {
                     "type": "string"
                 }
-
             },
             "example": {
                 "name": "João Junior",
@@ -185,11 +373,9 @@
             "properties": {
                 "file": {
                     "type": "string",
-                    "format":"binary"
-                } 
-               
+                    "format": "binary"
+                }
             }
         }
     }
-    
 }
